latest update with docker setup